syntax = "proto3";
option csharp_namespace = "Ozon.Route256.Practice";

import "google/protobuf/timestamp.proto";

service SdService {
  rpc DbResources(DbResourcesRequest) returns (stream DbResourcesResponse);
}

message DbResourcesRequest
{
  string cluster_name = 1;
}

message DbResourcesResponse
{
  string cluster_name = 1;
  repeated Replica replicas = 2;
  google.protobuf.Timestamp last_updated = 3;
}

message Replica
{
  ReplicaType type = 1;
  string host = 2;
  int32 port = 3;
  repeated int32 buckets = 4;

  enum ReplicaType {
    MASTER = 0;
    SYNC = 1;
    ASYNC = 2;
  }
}
